tests/cli_renderer_width_40/cli_renderer_width_40.exp
Error --------------------- basic.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   basic.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   basic.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error - name/that/gets/very/close.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   name/that/gets/very/close.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   name/that/gets/very/close.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error ----------------------------------
name/that/gets/very/close2.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   name/that/gets/very/close2.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   name/that/gets/very/close2.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error - name_that_gets_very_close.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   name_that_gets_very_close.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   name_that_gets_very_close.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error ----------------------------------
name_that_gets_very_close2.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   name_that_gets_very_close2.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   name_that_gets_very_close2.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error ------ non_breakable_breaks.js:7:1

Cannot cast
`reallyReallyReallyReallyReallyReallyRea
llyReallyLongVariableName` to empty
because number [1] is incompatible with
empty [2]. [incompatible-type]

   non_breakable_breaks.js:7:1
   7| reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName as empty;
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:6:74
   6| const reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName = 42;
                                                                               ^^ [1]
   non_breakable_breaks.js:7:69
   7| reallyReallyReallyReallyReallyReallyReallyReallyLongVariableName as empty;
                                                                          ^^^^^ [2]


Error ----- non_breakable_breaks.js:10:1

Cannot cast
`reallyReallyReallyReallyReallyReallyRea
llyReallyReallyReallyReallyReallyReallyR
eallyReallyReallyLongVariableName` to
empty because number [1] is incompatible
with empty [2]. [incompatible-type]

   non_breakable_breaks.js:10:1
   10| reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:9:122
    9| const reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName = 42;
                                                                                                                                ^^ [1]
   non_breakable_breaks.js:10:117
   10| reallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyReallyLongVariableName as empty;
                                                                                                                           ^^^^^ [2]


Error ----- non_breakable_breaks.js:13:1

Cannot cast
`abcdefghijklmnopqrstuvwxyzabcdefghijkl`
to empty because number [1] is
incompatible with empty [2].
[incompatible-type]

   non_breakable_breaks.js:13:1
   13| abcdefghijklmnopqrstuvwxyzabcdefghijkl as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:12:48
   12| const abcdefghijklmnopqrstuvwxyzabcdefghijkl = 42;
                                                      ^^ [1]
   non_breakable_breaks.js:13:43
   13| abcdefghijklmnopqrstuvwxyzabcdefghijkl as empty;
                                                 ^^^^^ [2]


Error ----- non_breakable_breaks.js:16:1

Cannot cast
`abcdefghijklmnopqrstuvwxyzabcdefghijklm
` to empty because number [1] is
incompatible with empty [2].
[incompatible-type]

   non_breakable_breaks.js:16:1
   16| abcdefghijklmnopqrstuvwxyzabcdefghijklm as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:15:49
   15| const abcdefghijklmnopqrstuvwxyzabcdefghijklm = 42;
                                                       ^^ [1]
   non_breakable_breaks.js:16:44
   16| abcdefghijklmnopqrstuvwxyzabcdefghijklm as empty;
                                                  ^^^^^ [2]


Error ----- non_breakable_breaks.js:19:1

Cannot cast `mnopqrstuvwxyzabcdefghijkl`
to empty because number [1] is
incompatible with empty [2].
[incompatible-type]

   non_breakable_breaks.js:19:1
   19| mnopqrstuvwxyzabcdefghijkl as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:18:36
   18| const mnopqrstuvwxyzabcdefghijkl = 42;
                                          ^^ [1]
   non_breakable_breaks.js:19:31
   19| mnopqrstuvwxyzabcdefghijkl as empty;
                                     ^^^^^ [2]


Error ----- non_breakable_breaks.js:22:1

Cannot cast
`mnopqrstuvwxyzabcdefghijklm` to empty
because number [1] is incompatible with
empty [2]. [incompatible-type]

   non_breakable_breaks.js:22:1
   22| mnopqrstuvwxyzabcdefghijklm as empty;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   non_breakable_breaks.js:21:37
   21| const mnopqrstuvwxyzabcdefghijklm = 42;
                                           ^^ [1]
   non_breakable_breaks.js:22:32
   22| mnopqrstuvwxyzabcdefghijklm as empty;
                                      ^^^^^ [2]


Error ----------------------------------
really/long/filename/that/is/much/more/then/40/characters.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   really/long/filename/that/is/much/more/then/40/characters.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   really/long/filename/that/is/much/more/then/40/characters.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error ----------------------------------
really_long_filename_that_is_much_more_then_40_characters.js:6:1

Cannot cast `null` to empty because
null [1] is incompatible with empty [2].
[incompatible-type]

   really_long_filename_that_is_much_more_then_40_characters.js:6:1
   6| null as empty; // Error: null ~> empty
      ^^^^ [1]

References:
   really_long_filename_that_is_much_more_then_40_characters.js:6:9
   6| null as empty; // Error: null ~> empty
              ^^^^^ [2]


Error -------------------- wrap.js:21:64

Cannot cast object literal to object
type because in property
`this.is.going[0].to.be.a.really[0].long
.error.message.that.hopefully[0].breaks.
on.multiple.lines`: number [1] is
incompatible with string [2].
[incompatible-type]

   wrap.js:21:64
   21|                               {breaks: {on: {multiple: {lines: 42}}}},
                                                                      ^^ [1]

References:
   wrap.js:51:64
   51|                               {breaks: {on: {multiple: {lines: string}}}},
                                                                      ^^^^^^ [2]


Error -------------- wrap_group.js:21:68

Cannot cast object literal to object
type because in property
`this.is.going[0].to.be.a.really[0].long
.error.message.that.hopefully[0].breaks.
on.multiple.lines.a`: number [1] is
incompatible with string [2].
[incompatible-type]

   wrap_group.js:21:68
   21|                               {breaks: {on: {multiple: {lines: {a: 1, b: 2}}}}},
                                                                          ^ [1]

References:
   wrap_group.js:54:59
   54|                                     multiple: {lines: {a: string, b: string}},
                                                                 ^^^^^^ [2]


Error -------------- wrap_group.js:21:74

Cannot cast object literal to object
type because in property
`this.is.going[0].to.be.a.really[0].long
.error.message.that.hopefully[0].breaks.
on.multiple.lines.b`: number [1] is
incompatible with string [2].
[incompatible-type]

   wrap_group.js:21:74
   21|                               {breaks: {on: {multiple: {lines: {a: 1, b: 2}}}}},
                                                                                ^ [1]

References:
   wrap_group.js:54:70
   54|                                     multiple: {lines: {a: string, b: string}},
                                                                            ^^^^^^ [2]



Found 16 errors
